# reto-winter-2025-google-grupo1

./: .coderabbit.yaml  .env.example  .gitignore  README.md  pyproject.toml  test.json
memory/: schema.json
src/: env.py  main.py  ui_entrypoint.py
src/chat/: bot.py  chat.py  clients.py  conversation.py  dependencies.py  factory.py  info_save.py  memory.py  types.py
src/chat/tool_use/: decorator.py  tool_use.py
src/chat/tools/: example.py  toolset.py
src/data/: __init__.py  embedding.py
src/forms/: test_form.py  toolset.py  types.py
src/prompts/: base_prompt.py  system_prompt.py
src/prompts/templates/: system_prompt_template.md
src/rag/: rag.py  toolset.py  types.py
src/repository/: conversation.py  form.py  message.py  repository_bigquery.py  test.py  types.py  user.py
src/templates/: interpolate.py
src/templates/system/: main_agent.md.jinja
src/textToSpeech/: __init__.py  textToSpeech.py
src/tools/: __init__.py  tool_with_RAG.py
src/ui/: adapter.py  bridge.py  chat_ui.py  details.py  file_renderer.py  types.py
test_values/: values.json
