[project]
name = "reto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bigquery>=0.0.45",
    "google-genai>=1.28.0",
    "gradio>=5.39.0",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.4.11",
]

[tool.ruff]
line-length = 100

[tool.uv]
package = true
